fix(inventory): preserve auditable stock trace lifecycle